# Python-Py-Project

./: .buildinfo  .bump2version.cfg  .bumpversion.cfg  .pre-commit-config.yaml  Makefile  QUICK_SETUP.ps1  README.md  api.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: gh-pages.yml
_sources/: api.rst.txt  index.rst.txt
docs/source/: Makefile  api.rst  conf.py
python_py_project/: __main__.py  cli.py  sql.py
tests/: test_main.py
